Added a Javascript file for functionality

--- a/survey.html
+++ b/survey.html
@@ -22,7 +22,7 @@
         <!-- Survey Form Screen -->
         <div id="survey-screen" class="screen active">
             <div class="form-container">
-                <h2>Lifestyle Preferences Survey</h2>
+                <h2>Lifestyle Survey</h2>
                 <form id="survey-form">
                     <!-- Personal Details Section -->
                     <div class="section">
